--- a/expense-tracker-app/src/component/Tracker.css
+++ b/expense-tracker-app/src/component/Tracker.css
@@ -42,7 +42,7 @@ h, p{
 
 .Tracker-box{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
     text-align: center;
     font-size:2rem ;
     height:5rem;
@@ -58,6 +58,7 @@ input , button{
     margin-bottom: 1.4rem;
     border: 1px solid rgb(206, 228, 184);
     border-radius: 2rem;
+    font-size: 1.4rem;
     text-align: center;
 }
 
@@ -73,7 +74,7 @@ button{
     height: 3rem;
     cursor: pointer;
     color: rgb(218, 218, 218);
-    font-size: 1.4rem;
+    /* font-size: 1.4rem; */
     background-color: blueviolet;
 }
 
