--- a/expense-tracker-app/src/component/Tracker.css
+++ b/expense-tracker-app/src/component/Tracker.css
@@ -33,6 +33,8 @@ body{
 .Balance{
     text-align: center;
     margin-bottom: 2rem;
+    /* color: white;
+    background-color:blueviolet ; */
 }
 
 
@@ -61,6 +63,7 @@ input , button{
     font-size: 1.4rem;
     text-align: center;
 }
+
 
 .NewTransations{
     margin-top: 2rem;
@@ -93,5 +96,14 @@ button{
     flex-direction: row;
     justify-content: space-between;
     /* border: 2px solid black; */
+}
+
+.deleteButton{
+    width: 3rem;
+}
+.editButton{
+    width: max-content;
+    padding-left: 1.8rem;
+    padding-right: 1.8rem;
 }
 
